Fix random layout issues
1. Removed some dead code
2. Fix an overflow issue on promotions
3. Fix a media query for onboarding and info form
4. Rename FakeCover to HeroImage

--- a/src/components/assets/Avatar.css
+++ b/src/components/assets/Avatar.css
@@ -82,8 +82,6 @@
   opacity: 0;
 }
 
-.isUserDetailHeader .isPending > .AvatarImage,
-.isUserDetailHeader .isRequesting > .AvatarImage,
 .PostHeader .isPending > .AvatarImage,
 .PostHeader .isRequesting > .AvatarImage {
   opacity: 1;
